# colorlog

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
colorlog/: __init__.py  colorlog.py  logger.py  utils.py
colorlog.egg-info/: PKG-INFO  SOURCES.txt
