# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colorlog-python"
version = "1.1.0"
description = "A lightweight logger that makes logging to the terminal easy and pretty in python."
readme = "README.md"
authors = [{name = "Jimmy Deng", email = "jimmydengpeng@gmail.com"}]
maintainers = [{name = "Jimmy Deng", email = "jimmydengpeng@gmail.com"}]
keywords = ["logging", "logger", "color log"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "PyYAML",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["humanfriendly", "pytest"]

[project.urls]
homepage = "https://github.com/jimmydengpeng/colorlog"
